src/components/KeyboardLayout/type/win.css
.keyboard-layout_type_win {
    position: relative;
    border: 2px solid #333;
    width: 1140px;
    padding: 20px;
    border-radius: 5px;
}

.keyboard-layout_type_win .keyboard-layout__row {
    position: relative;
    display: flex;
    margin-bottom: 5px;
    width: 1140px;
}

.keyboard-layout_type_win .keyboard-key__top-left-symbol {
    position: absolute;
    font-size: 16px;
    left: 8px;
    top: 5px;
}

.keyboard-layout_type_win .keyboard-key__top-right-symbol {
    position: absolute;
    font-size: 16px;
    right: 8px;
    top: 5px;
}

.keyboard-layout_type_win .keyboard-key__top-symbol {
    position: absolute;
    font-size: 14px;
    left: 8px;
    right: 8px;
    top: 5px;
}

.keyboard-layout_type_win .keyboard-key__bottom-symbol {
    position: absolute;
    font-size: 16px;
    left: 8px;
    right: 8px;
    bottom: 5px;
}

.keyboard-layout_type_win .keyboard-key__bottom-right-symbol {
    position: absolute;
    font-size: 16px;
    right: 8px;
    bottom: 5px;
}

.keyboard-layout_type_win .keyboard-key__bottom-left-symbol {
    position: absolute;
    font-size: 16px;
    left: 8px;
    bottom: 5px;
}

.keyboard-layout_type_win .keyboard-key__bottom-text {
    position: absolute;
    font-size: 12px;
    left: 8px;
    right: 8px;
    bottom: 5px;
}

.keyboard-layout_type_win .keyboard-key {
    display: flex;
    position: relative;
    cursor: default;
    margin-right: 5px;

    flex-wrap: wrap;
    width: 45px;
    height: 45px;

    align-content: center;
    justify-content: center;
    font-size: 14px;
    text-align: center;
    line-height: 1em;

    color: white;
    background: black;
    border: 1px solid white;
    border-radius: 5px;
    box-sizing: border-box;
}

.keyboard-layout_type_win .keyboard-key_view_circle {
    border-radius: 100% 100%;
}

.keyboard-layout_type_win .keyboard-key_align_left {
    text-align: left;
    justify-content: left;
}

.keyboard-layout_type_win .keyboard-key_align_right {
    text-align: right;
    justify-content: right;
}

.keyboard-layout_type_win .keyboard-key_wasPressed {
    background: white;
    color: black;
}

.keyboard-layout_type_win .keyboard-key_pressed {
    background: gold;
    border-color: gold;
    top: 1px;
    left: 1px;
    color: black;
}

.keyboard-layout_type_win .keyboard-layout__row_num_0 {
    margin-top: 40px;
    margin-bottom: 10px;
}

.keyboard-layout_type_win .keyboard-layout__row_num_5 {
    margin-bottom: 0;
}

.keyboard-layout_type_win .keyboard-layout__row_num_6 {
    position: absolute;
    left: 570px;
    top: 10px;
    width: 150px;
}

.keyboard-layout_type_win .keyboard-key_code_Tab {
    width: 65px;
}

.keyboard-layout_type_win .keyboard-key_code_ShiftLeft,
.keyboard-layout_type_win .keyboard-key_code_ShiftRight {
    width: 95px;
}

.keyboard-layout_type_win .keyboard-key_code_Enter {
    width: 75px;
    border-radius: 5px 5px 0 5px;
    align-content: end;
}

.keyboard-layout_type_win .keyboard-key_code_Enter::after {
    position: absolute;
    content: '';
    right: -1px;
    top: 43px;
    width: 60px;
    height: 50px;
    border-width: 1px;
    border-style: solid;
    border-color: inherit;
    border-top: none;
    border-radius: 0 0 5px 5px;
    background-color: inherit;
}

.keyboard-layout_type_win .keyboard-key_code_Backspace {
    width: 95px;
}

.keyboard-layout_type_win .keyboard-key_code_CapsLock {
    width: 80px;
}

.keyboard-layout_type_win .keyboard-key_code_CapsLock .keyboard-key__led {
    position: absolute;
    left: 8px;
    top: 8px;
    width: 8px;
    height: 8px;
    background-color: #333;
    border-radius: 100%;
    border: 1px solid transparent;
}

.keyboard-layout_type_win .keyboard-key_code_CapsLock .keyboard-key__led_on {
    background-color: YellowGreen;
    border-color: rgba(0, 0, 0, .5);
}

.keyboard-layout_type_win .keyboard-key_fontSize_small {
    font-size: 10px;
    line-height: 14px;
}

.keyboard-layout_type_win .keyboard-key_code_AltLeft,
.keyboard-layout_type_win .keyboard-key_code_AltRight,
.keyboard-layout_type_win .keyboard-key_code_ContextMenu,
.keyboard-layout_type_win .keyboard-key_code_MetaLeft,
.keyboard-layout_type_win .keyboard-key_code_MetaRight {
    width: 50px;
}

.keyboard-layout_type_win .keyboard-key_code_ControlLeft,
.keyboard-layout_type_win .keyboard-key_code_ControlRight {
    width: 60px;
}

.keyboard-layout_type_win .keyboard-key_code_Space {
    width: 340px;
}

.keyboard-layout_type_win .keyboard-key_code_ArrowLeft,
.keyboard-layout_type_win .keyboard-key_code_ArrowRight,
.keyboard-layout_type_win .keyboard-key_code_ArrowUp,
.keyboard-layout_type_win .keyboard-key_code_ArrowDown {
    font-weight: bold;
}

.keyboard-layout_type_win .keyboard-key_code_NumpadAdd,
.keyboard-layout_type_win .keyboard-key_code_NumpadEnter {
    align-content: end;
}

.keyboard-layout_type_win .keyboard-key_code_NumpadAdd::after,
.keyboard-layout_type_win .keyboard-key_code_NumpadEnter::after {
    position: absolute;
    content: '';
    left: -1px;
    top: 40px;
    width: 43px;
    height: 53px;
    border-width: 1px;
    border-style: solid;
    border-color: inherit;
    border-top: none;
    border-radius: 0 0 5px 5px;
    background-color: inherit;
}


.keyboard-layout_type_win .keyboard-key_code_Numpad0 {
    width: 95px;
}

.keyboard-layout_type_win .keyboard-spacer_name_between-func {
    width: 33px;
}

.keyboard-layout_type_win .keyboard-spacer_name_before-sys {
    width: 20px;
}

.keyboard-layout_type_win .keyboard-spacer_name_before-numpad {
    width: 20px;
}

.keyboard-layout_type_win .keyboard-spacer_name_before-numpad-long {
    width: 255px;
}

.keyboard-layout_type_win .keyboard-spacer_name_before-arrow-up {
    width: 70px;
}

.keyboard-layout_type_win .keyboard-spacer_name_after-arrow-up {
    width: 70px;
}

.keyboard-layout_type_win .keyboard-spacer_name_before-arrows {
    width: 20px;
}

.keyboard-layout_type_win .keyboard-spacer_name_after-arrows {
    width: 20px;
}

.keyboard-layout_type_win .keyboard-led {
    width: 10px;
    height: 20px;
    margin: 10px 15px;
    background-color: #444;
}

.keyboard-layout_type_win .keyboard-led_on {
    background-color: yellowgreen;
}

.keyboard-layout_type_win .keyboard-key_code_MetaLeft .keyboard-key__top-left-symbol,
.keyboard-layout_type_win .keyboard-key_code_MetaLeft .keyboard-key__top-right-symbol,
.keyboard-layout_type_win .keyboard-key_code_MetaLeft .keyboard-key__bottom-left-symbol,
.keyboard-layout_type_win .keyboard-key_code_MetaLeft .keyboard-key__bottom-right-symbol,
.keyboard-layout_type_win .keyboard-key_code_MetaRight .keyboard-key__top-left-symbol,
.keyboard-layout_type_win .keyboard-key_code_MetaRight .keyboard-key__top-right-symbol,
.keyboard-layout_type_win .keyboard-key_code_MetaRight .keyboard-key__bottom-left-symbol,
.keyboard-layout_type_win .keyboard-key_code_MetaRight .keyboard-key__bottom-right-symbol {
    position: absolute;
    display: block;
    width: 7px;
    height: 7px;
    background-color: white;
}

.keyboard-layout_type_win .keyboard-key_code_MetaLeft.keyboard-key_wasPressed .keyboard-key__top-left-symbol,
.keyboard-layout_type_win .keyboard-key_code_MetaLeft.keyboard-key_wasPressed .keyboard-key__top-right-symbol,
.keyboard-layout_type_win .keyboard-key_code_MetaLeft.keyboard-key_wasPressed .keyboard-key__bottom-left-symbol,
.keyboard-layout_type_win .keyboard-key_code_MetaLeft.keyboard-key_wasPressed .keyboard-key__bottom-right-symbol,
.keyboard-layout_type_win .keyboard-key_code_MetaRight.keyboard-key_wasPressed .keyboard-key__top-left-symbol,
.keyboard-layout_type_win .keyboard-key_code_MetaRight.keyboard-key_wasPressed .keyboard-key__top-right-symbol,
.keyboard-layout_type_win .keyboard-key_code_MetaRight.keyboard-key_wasPressed .keyboard-key__bottom-left-symbol,
.keyboard-layout_type_win .keyboard-key_code_MetaRight.keyboard-key_wasPressed .keyboard-key__bottom-right-symbol {
    background-color: black;
}

.keyboard-layout_type_win .keyboard-key_code_MetaLeft .keyboard-key__top-left-symbol,
.keyboard-layout_type_win .keyboard-key_code_MetaRight .keyboard-key__top-left-symbol {
    left: 17px;
    top: 14px;
}

.keyboard-layout_type_win .keyboard-key_code_MetaLeft .keyboard-key__top-right-symbol,
.keyboard-layout_type_win .keyboard-key_code_MetaRight .keyboard-key__top-right-symbol {
    left: 26px;
    top: 14px;
}

.keyboard-layout_type_win .keyboard-key_code_MetaLeft .keyboard-key__bottom-left-symbol,
.keyboard-layout_type_win .keyboard-key_code_MetaRight .keyboard-key__bottom-left-symbol {
    left: 26px;
    top: 23px;
}

.keyboard-layout_type_win .keyboard-key_code_MetaLeft .keyboard-key__bottom-right-symbol,
.keyboard-layout_type_win .keyboard-key_code_MetaRight .keyboard-key__bottom-right-symbol {
    left: 17px;
    top: 23px;
}

